--- a/clipboard/input.css
+++ b/clipboard/input.css
@@ -6,14 +6,21 @@
   h3 {
     @apply mb-8 text-4xl font-bold text-darkGrayishBlue md:text-5xl;
   }
+  h5 {
+    @apply mb-2 text-2xl font-bold text-darkGrayishBlue;
+  }
 }
 
 .section-container {
-  @apply max-w-6xl mx-auto text-center;
+  @apply max-w-6xl mx-auto text-center px-10;
 }
 
 .button-container {
   @apply flex flex-col justify-center w-full space-y-6 text-xl text-white md:flex-row md:space-y-0 md:space-x-4;
+}
+
+.section-paragraph {
+  @apply max-w-3xl mx-auto mb-24 text-xl leading-9 text-center text-grayishBlue;
 }
 
 body {
