--- a/clipboard/input.css
+++ b/clipboard/input.css
@@ -20,7 +20,7 @@
 }
 
 .section-paragraph {
-  @apply max-w-3xl mx-auto mb-24 text-xl leading-9 text-center text-grayishBlue;
+  @apply max-w-3xl mx-auto text-xl leading-9 text-center text-grayishBlue;
 }
 
 body {
