--- a/FlyoColorPicker/css/style.css
+++ b/FlyoColorPicker/css/style.css
@@ -531,6 +531,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-top: 2.5rem;
 }
 
+.inline {
+  display: inline;
+}
+
 .flex {
   display: flex;
 }
