--- a/bookmarkManager/css/style.css
+++ b/bookmarkManager/css/style.css
@@ -662,6 +662,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   overflow-x: visible;
 }
 
+.scroll-smooth {
+  scroll-behavior: smooth;
+}
+
 .rounded-lg {
   border-radius: 0.5rem;
 }
@@ -813,11 +817,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
-}
-
-.text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem;
 }
 
 .font-semibold {
