--- a/bookmarkManager/input.css
+++ b/bookmarkManager/input.css
@@ -16,3 +16,8 @@
     @apply absolute rounded-r-full top-60 bg-softBlue;
   }
 }
+
+.ficon:hover {
+  filter: invert(53%) sepia(68%) saturate(434%) hue-rotate(120deg)
+    brightness(101%) contrast(94%);
+}
