--- a/caferio/input.css
+++ b/caferio/input.css
@@ -1,3 +1,21 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.header {
+  @apply bg-gradient-to-b from-orange-100 to-transparent;
+}
+
+.container {
+  @apply max-w-screen-xl mx-auto px-6;
+}
+
+.row {
+  @apply flex flex-wrap;
+}
+.header-left-col {
+  @apply w-full lg:w-6/12 p-5;
+}
+.header-badge {
+  @apply text-xs uppercase font-medium bg-amber-100 px-3 py-2 rounded-3xl inline-block text-orange-800;
+}
