--- a/caferio/css/style.css
+++ b/caferio/css/style.css
@@ -549,3 +549,39 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-text-opacity: 1;
   color: rgb(154 52 18 / var(--tw-text-opacity));
 }
+
+.header-heading {
+  margin-top: 1.25rem;
+  font-size: 3rem;
+  line-height: 1;
+  font-weight: 700;
+  text-transform: capitalize;
+}
+
+@media (min-width: 768px) {
+  .header-heading {
+    width: 75%;
+  }
+}
+
+@media (min-width: 1024px) {
+  .header-heading {
+    width: 100%;
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+  }
+}
+
+.header-delivery {
+  display: inline-block;
+  --tw-rotate: 3deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  --tw-bg-opacity: 1;
+  background-color: rgb(234 88 12 / var(--tw-bg-opacity));
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
