--- a/caferio/input.css
+++ b/caferio/input.css
@@ -28,3 +28,15 @@
 .header-paragraph {
   @apply mt-5 text-base text-gray-500;
 }
+.header-customers-ul {
+  @apply flex mt-5 items-center;
+}
+.header-customers-li {
+  @apply block w-[40px] h-[40px] overflow-hidden rounded-full border-[3.5px] border-orange-50 -ml-3 first:-ml-0;
+}
+.header-customers-li-img {
+  @apply w-full h-full object-cover;
+}
+.header-customers-ul-li-last {
+  @apply ml-3 text-sm md:text-xs font-medium text-orange-800;
+}
