--- a/caferio/css/style.css
+++ b/caferio/css/style.css
@@ -687,6 +687,80 @@ Ensure the default browser behavior of the `hidden` attribute.
      object-fit: cover;
 }
 
+/*Nav*/
+
+/* top-0 left-0 bottom-0 right-0 = inset-0*/
+
+.navigation {
+  position: fixed;
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+  left: 0px;
+  height: 100%;
+  width: 100%;
+  background-color: rgb(0 0 0 / 0.4);
+}
+
+.nav-container {
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  display: flex;
+  height: 100%;
+  width: 100%;
+  align-items: center;
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 247 237 / var(--tw-bg-opacity));
+}
+
+@media (min-width: 768px) {
+  .nav-container {
+    width: 50%;
+  }
+}
+
+@media (min-width: 1024px) {
+  .nav-container {
+    width: 33.333333%;
+  }
+}
+
+@media (min-width: 1280px) {
+  .nav-container {
+    width: 25%;
+  }
+}
+
+.nav-ul {
+  width: 100%;
+}
+
+.nav-link {
+  display: block;
+  width: 100%;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+  font-size: 1rem;
+  line-height: 1.5rem;
+  text-transform: capitalize;
+  --tw-text-opacity: 1;
+  color: rgb(154 52 18 / var(--tw-text-opacity));
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 300ms;
+}
+
+.nav-link:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(194 65 12 / var(--tw-bg-opacity));
+  padding-left: 1.5rem;
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
 @media (min-width: 1280px) {
   .xl\:pt-20 {
     padding-top: 5rem;
