--- a/caferio/input.css
+++ b/caferio/input.css
@@ -52,3 +52,18 @@
 .header-right-img {
   @apply w-full h-auto object-cover;
 }
+
+/*Nav*/
+/* top-0 left-0 bottom-0 right-0 = inset-0*/
+.navigation {
+  @apply fixed inset-0 w-full h-full bg-black/40;
+}
+.nav-container {
+  @apply absolute top-0 right-0 w-full md:w-6/12 lg:w-4/12 xl:w-3/12 h-full bg-orange-50 flex items-center;
+}
+.nav-ul {
+  @apply w-full;
+}
+.nav-link {
+  @apply block px-4 py-3 w-full text-orange-800 capitalize text-base hover:bg-orange-700 hover:text-white hover:pl-6 transition-all duration-300;
+}
