--- a/caferio/css/style.css
+++ b/caferio/css/style.css
@@ -510,12 +510,31 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-left: -1.25rem;
 }
 
+.h-6 {
+  height: 1.5rem;
+}
+
+.w-6 {
+  width: 1.5rem;
+}
+
 .items-center {
   align-items: center;
 }
 
+.rounded-full {
+  border-radius: 9999px;
+}
+
 .pt-28 {
   padding-top: 7rem;
+}
+
+.image-cover {
+  height: 100%;
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .header {
@@ -539,13 +558,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   left: 1.5rem;
   height: 40px;
   width: auto;
-}
-
-.logo-img {
-  height: 100%;
-  width: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
 }
 
 .row {
@@ -649,13 +661,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-left: -0px;
 }
 
-.header-customers-li-img {
-  height: 100%;
-  width: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-
 .header-customers-ul-li-last {
   margin-left: 0.75rem;
   font-size: 0.875rem;
@@ -689,14 +694,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 /*Nav*/
 
-/* top-0 left-0 bottom-0 right-0 = inset-0*/
-
 .navigation {
   position: fixed;
   top: 0px;
-  right: 0px;
-  bottom: 0px;
-  left: 0px;
+  right: -100%;
   height: 100%;
   width: 100%;
   background-color: rgb(0 0 0 / 0.4);
@@ -757,6 +758,33 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-bg-opacity: 1;
   background-color: rgb(194 65 12 / var(--tw-bg-opacity));
   padding-left: 1.5rem;
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.nav-close {
+  position: absolute;
+  top: 1rem;
+  cursor: pointer;
+  --tw-text-opacity: 1;
+  color: rgb(154 52 18 / var(--tw-text-opacity));
+}
+
+.nav-open {
+  position: fixed;
+  top: 1.5rem;
+  right: 1.5rem;
+  display: flex;
+  height: 40px;
+  width: 40px;
+  cursor: pointer;
+  align-items: center;
+  justify-content: center;
+  border-radius: 9999px;
+  --tw-bg-opacity: 1;
+  background-color: rgb(249 115 22 / var(--tw-bg-opacity));
+  font-size: 1.125rem;
+  line-height: 1.75rem;
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
