--- a/caferio/css/style.css
+++ b/caferio/css/style.css
@@ -506,8 +506,16 @@ Ensure the default browser behavior of the `hidden` attribute.
   position: relative;
 }
 
+.-right-full {
+  right: -100%;
+}
+
 .-ml-5 {
   margin-left: -1.25rem;
+}
+
+.flex {
+  display: flex;
 }
 
 .h-6 {
@@ -697,10 +705,13 @@ Ensure the default browser behavior of the `hidden` attribute.
 .navigation {
   position: fixed;
   top: 0px;
-  right: -100%;
+  z-index: 20;
   height: 100%;
   width: 100%;
   background-color: rgb(0 0 0 / 0.4);
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 500ms;
 }
 
 .nav-container {
@@ -765,6 +776,7 @@ Ensure the default browser behavior of the `hidden` attribute.
 .nav-close {
   position: absolute;
   top: 1rem;
+  margin-left: 0.5rem;
   cursor: pointer;
   --tw-text-opacity: 1;
   color: rgb(154 52 18 / var(--tw-text-opacity));
@@ -774,7 +786,7 @@ Ensure the default browser behavior of the `hidden` attribute.
   position: fixed;
   top: 1.5rem;
   right: 1.5rem;
-  display: flex;
+  z-index: 10;
   height: 40px;
   width: 40px;
   cursor: pointer;
