base style category

--- a/caferio/css/style.css
+++ b/caferio/css/style.css
@@ -526,12 +526,24 @@ Ensure the default browser behavior of the `hidden` attribute.
   width: 1.5rem;
 }
 
+.w-full {
+  width: 100%;
+}
+
 .items-center {
   align-items: center;
 }
 
+.scroll-smooth {
+  scroll-behavior: smooth;
+}
+
 .rounded-full {
   border-radius: 9999px;
+}
+
+.p-3 {
+  padding: 0.75rem;
 }
 
 .pt-28 {
@@ -571,6 +583,24 @@ Ensure the default browser behavior of the `hidden` attribute.
 .row {
   display: flex;
   flex-wrap: wrap;
+}
+
+.heading {
+  margin-bottom: 1.25rem;
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+  font-weight: 500;
+  text-transform: uppercase;
+  --tw-text-opacity: 1;
+  color: rgb(249 115 22 / var(--tw-text-opacity));
+  -webkit-text-decoration-line: underline;
+          text-decoration-line: underline;
+  -webkit-text-decoration-color: #f97316;
+          text-decoration-color: #f97316;
+  -webkit-text-decoration-style: wavy;
+          text-decoration-style: wavy;
+  text-decoration-thickness: 4px;
+  text-underline-offset: 5px;
 }
 
 /*Header left col*/
@@ -799,6 +829,65 @@ Ensure the default browser behavior of the `hidden` attribute.
   line-height: 1.75rem;
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+/*Category*/
+
+.category {
+  margin-top: 5rem;
+  margin-bottom: 5rem;
+}
+
+@media (min-width: 768px) {
+  .category {
+    margin-top: 2.5rem;
+    margin-bottom: 2.5rem;
+  }
+}
+
+.category-block {
+  position: relative;
+  display: block;
+  height: 120px;
+  width: 100%;
+  overflow: hidden;
+  border-radius: 0.375rem;
+}
+
+@media (min-width: 768px) {
+  .category-block {
+    height: 140px;
+  }
+}
+
+.category-layer {
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+  left: 0px;
+  display: flex;
+  height: 100%;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+  background-color: rgb(0 0 0 / 0.6);
+}
+
+.category-name {
+  font-size: 1rem;
+  line-height: 1.5rem;
+  font-weight: 500;
+  text-transform: capitalize;
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+@media (min-width: 768px) {
+  .category-name {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
 }
 
 @media (min-width: 1280px) {
