--- a/caferio/input.css
+++ b/caferio/input.css
@@ -77,11 +77,11 @@
   @apply my-20 md:my-10;
 }
 .category-block {
-  @apply block w-full h-[120px] md:h-[140px] overflow-hidden rounded-md relative;
+  @apply block w-full h-[120px] md:h-[140px] overflow-hidden rounded-md relative before:absolute before:inset-0 before:w-full before:h-full before:bg-orange-500 before:z-10 before:scale-0 hover:before:scale-150 before:transition-all before:duration-700 before:rounded-full hover:before:rounded-none before:origin-top-right;
 }
 .category-layer {
   @apply absolute inset-0 w-full h-full bg-black/60 flex items-center justify-center;
 }
 .category-name {
-  @apply text-white text-base md:text-lg font-medium capitalize;
+  @apply text-white text-base md:text-lg font-medium capitalize z-20;
 }
