--- a/caferio/css/style.css
+++ b/caferio/css/style.css
@@ -510,6 +510,11 @@ Ensure the default browser behavior of the `hidden` attribute.
   right: -100%;
 }
 
+.-mx-3 {
+  margin-left: -0.75rem;
+  margin-right: -0.75rem;
+}
+
 .-ml-5 {
   margin-left: -1.25rem;
 }
@@ -524,6 +529,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .w-6 {
   width: 1.5rem;
+}
+
+.w-6\/12 {
+  width: 50%;
 }
 
 .w-full {
@@ -735,7 +744,7 @@ Ensure the default browser behavior of the `hidden` attribute.
 .navigation {
   position: fixed;
   top: 0px;
-  z-index: 20;
+  z-index: 40;
   height: 100%;
   width: 100%;
   background-color: rgb(0 0 0 / 0.4);
@@ -816,7 +825,7 @@ Ensure the default browser behavior of the `hidden` attribute.
   position: fixed;
   top: 1.5rem;
   right: 1.5rem;
-  z-index: 10;
+  z-index: 30;
   height: 40px;
   width: 40px;
   cursor: pointer;
@@ -921,7 +930,29 @@ Ensure the default browser behavior of the `hidden` attribute.
   }
 }
 
+@media (min-width: 640px) {
+  .sm\:w-6\/12 {
+    width: 50%;
+  }
+}
+
+@media (min-width: 768px) {
+  .md\:w-4\/12 {
+    width: 33.333333%;
+  }
+}
+
+@media (min-width: 1024px) {
+  .lg\:w-2\/12 {
+    width: 16.666667%;
+  }
+}
+
 @media (min-width: 1280px) {
+  .xl\:w-\[20\%\] {
+    width: 20%;
+  }
+
   .xl\:pt-20 {
     padding-top: 5rem;
   }
