--- a/caferio/css/style.css
+++ b/caferio/css/style.css
@@ -519,6 +519,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-left: -1.25rem;
 }
 
+.mt-3 {
+  margin-top: 0.75rem;
+}
+
 .flex {
   display: flex;
 }
@@ -966,12 +970,81 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-bottom: 5rem;
 }
 
+.popular-dishes-column {
+  width: 100%;
+  padding: 0.75rem;
+}
+
+@media (min-width: 640px) {
+  .popular-dishes-column {
+    width: 50%;
+  }
+}
+
+@media (min-width: 1024px) {
+  .popular-dishes-column {
+    width: 33.333333%;
+  }
+}
+
+@media (min-width: 1280px) {
+  .popular-dishes-column {
+    width: 25%;
+  }
+}
+
 .popular-dishes-image {
+  position: relative;
   height: 190px;
   width: 100%;
   overflow: hidden;
   border-top-left-radius: 1rem;
   border-top-right-radius: 1rem;
+}
+
+.popular-dishes-layer {
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+  left: 0px;
+  height: 100%;
+  width: 100%;
+  background-color: rgb(0 0 0 / 0.5);
+}
+
+.popular-dishes-label {
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  display: block;
+  border-radius: 1.5rem;
+  --tw-bg-opacity: 1;
+  background-color: rgb(249 115 22 / var(--tw-bg-opacity));
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+  font-size: 0.75rem;
+  line-height: 1rem;
+  text-transform: capitalize;
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.popular-dishes-title {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+  text-transform: capitalize;
+  --tw-text-opacity: 1;
+  color: rgb(17 24 39 / var(--tw-text-opacity));
+}
+
+@media (min-width: 768px) {
+  .popular-dishes-title {
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
 }
 
 @media (min-width: 1280px) {
