--- a/caferio/input.css
+++ b/caferio/input.css
@@ -92,6 +92,18 @@
 .popular-dishes {
   @apply mt-[96px] bg-gradient-to-b from-orange-50/70 to-transparent -skew-y-2 py-20;
 }
+.popular-dishes-column {
+  @apply w-full sm:w-6/12 lg:w-4/12 xl:w-3/12 p-3;
+}
 .popular-dishes-image {
-  @apply w-full h-[190px] overflow-hidden rounded-tl-2xl rounded-tr-2xl;
+  @apply relative w-full h-[190px] overflow-hidden rounded-tl-2xl rounded-tr-2xl;
+}
+.popular-dishes-layer {
+  @apply absolute inset-0 w-full h-full bg-black/50;
+}
+.popular-dishes-label {
+  @apply absolute top-4 right-4 block px-3 py-1 bg-orange-500 text-white rounded-3xl text-xs capitalize;
+}
+.popular-dishes-title {
+  @apply text-lg md:text-base capitalize text-gray-900;
 }
