--- a/caferio/input.css
+++ b/caferio/input.css
@@ -122,3 +122,9 @@
 .popular-dishes-discount {
   @apply line-through text-base text-gray-400;
 }
+.btn {
+  @apply inline-block px-4 py-2 text-white capitalize text-sm transition-all duration-500 rounded;
+}
+.btn-default {
+  @apply bg-orange-600 focus:ring-2 ring-offset-2 ring-orange-400;
+}
