--- a/caferio/input.css
+++ b/caferio/input.css
@@ -102,7 +102,7 @@
   @apply absolute inset-0 w-full h-full bg-black/50;
 }
 .popular-dishes-label {
-  @apply absolute top-4 right-4 block px-3 py-1 bg-orange-500 text-white rounded-3xl text-xs capitalize;
+  @apply absolute top-4 right-4 block px-3 py-1 text-white rounded-3xl text-xs capitalize;
 }
 .popular-dishes-title {
   @apply text-lg md:text-base capitalize text-gray-900;
