--- a/caferio/css/style.css
+++ b/caferio/css/style.css
@@ -515,6 +515,11 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-right: -0.75rem;
 }
 
+.my-2 {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
 .-ml-5 {
   margin-left: -1.25rem;
 }
@@ -580,11 +585,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   border-radius: 9999px;
 }
 
-.bg-green-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(22 163 74 / var(--tw-bg-opacity));
-}
-
 .bg-green-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(34 197 94 / var(--tw-bg-opacity));
@@ -601,6 +601,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .pt-28 {
   padding-top: 7rem;
+}
+
+.text-center {
+  text-align: center;
 }
 
 .image-cover {
