--- a/caferio/input.css
+++ b/caferio/input.css
@@ -136,7 +136,7 @@
   @apply w-full sm:w-8/12 md:w-7/12 lg:w-5/12 xl:w-4/12 p-6;
 }
 .pricing-card {
-  @apply bg-yellow-50 px-10 py-20 rounded-lg border border-yellow-300 border-dashed;
+  @apply bg-yellow-50 px-10 py-20 rounded-lg border-2 border-yellow-300 border-dashed;
 }
 .pricing-heading {
   @apply text-center uppercase text-xl font-semibold text-orange-700;
@@ -149,4 +149,13 @@
 }
 .pricing-message {
   @apply text-base text-gray-700;
+}
+.pricing-list {
+  @apply flex items-center mb-5;
+}
+.pricing-list-icon {
+  @apply flex justify-center items-center w-[25px] h-[25px] rounded-full bg-orange-600 mr-3;
+}
+.pricing-list-feature {
+  @apply capitalize text-gray-700 text-base;
 }
