--- a/caferio/css/style.css
+++ b/caferio/css/style.css
@@ -545,6 +545,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-top: 1.75rem;
 }
 
+.ml-4 {
+  margin-left: 1rem;
+}
+
 .flex {
   display: flex;
 }
@@ -1424,6 +1428,39 @@ Ensure the default browser behavior of the `hidden` attribute.
   .testimonials-comment-col {
     width: 50%;
   }
+}
+
+.testimonials-user {
+  margin-bottom: 1rem;
+  display: flex;
+  align-items: center;
+}
+
+.testimonials-user-img {
+  display: block;
+  height: 60px;
+  width: 60px;
+  overflow: hidden;
+  border-radius: 9999px;
+}
+
+.testimonials-user-name {
+  display: block;
+  font-size: 1rem;
+  line-height: 1.5rem;
+  font-weight: 500;
+  text-transform: capitalize;
+  line-height: 16px;
+  --tw-text-opacity: 1;
+  color: rgb(71 85 105 / var(--tw-text-opacity));
+}
+
+.testimonials-user-twitter {
+  font-size: 0.75rem;
+  line-height: 1rem;
+  font-weight: 500;
+  --tw-text-opacity: 1;
+  color: rgb(194 65 12 / var(--tw-text-opacity));
 }
 
 @media (min-width: 1280px) {
