--- a/caferio/css/style.css
+++ b/caferio/css/style.css
@@ -1548,7 +1548,27 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 
 .lightbox-body {
-  @applyp-6 sm:p-0 w-auto max-h-[500px] h-full overflow-hidden;
+  height: 100%;
+  max-height: 500px;
+  width: auto;
+  overflow: hidden;
+  padding: 1.5rem;
+}
+
+@media (min-width: 640px) {
+  .lightbox-body {
+    padding: 0px;
+  }
+}
+
+/*download section*/
+
+.download {
+  height: 450px;
+  width: 100%;
+  background-image: url('../images/appDownload/app-bg.png');
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 @media (min-width: 1280px) {
